@@ -24,6 +24,7 @@ dir = script
 
 [Prereqs / RuntimeRequires]
 perl = 5.006
+HTML::Form = 6.08
 Scalar::Util = 1.14
 
 [Prereqs / TestRequires]
